# dotfiles

./: .gitignore  README.md  ZeroOmegaOptions.bak  chromium-flags.conf  dconf-settings.ini  redshift.conf
MangoHud/.config/MangoHud/: MangoHud.conf
alacritty/: alacritty.yml
alacritty/.config/alacritty/: alacritty.toml  alacritty.yml
aria2c/.aria2/: aria2.conf
bun/: .bunfig.toml
cargo/.cargo/: .gitignore  config  config.toml
clang-format/: .clang-format
dwm-6.3/: .gitignore  Makefile  config.h  dwm.c
dwm-6.4/: config.h  dwm.c
fcitx5/: .gitignore
fcitx5/.config/fcitx5/: config  (+1 more)
git/: .gitconfig  .gitignore_global
hypr/: hypr-init
i3/: config
i3status-rs/: config.toml
ideavim/: .ideavimrc
konsole/.config/: konsolerc
nvim/: .nvimlog  coc-settings.json  init.vim
redshift/: redshift.conf
rsblocks/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
rsblocks/src/: blockmanager.rs  main.rs  run.rs  types.rs
rsblocks/src/config/: battery.rs  bitcoins.rs  brightness.rs  cputemp.rs  disk.rs  loadavg.rs  local_ip.rs  memory.rs  mod.rs  mpd.rs  netspeed.rs  pub_ip.rs  spotify.rs  time.rs  uptime.rs  volume.rs  weather.rs
rsblocks/src/utils/: battery.rs  disk.rs  memory.rs  mod.rs  netspeed.rs  spotify.rs  time.rs  volume.rs
starship/.config/: starship.toml
tmux/: .tmux.conf
vim/: .vimrc
vnote/: vnote.ini
vscode/: keybindings.json  settings.json
wayfire/.config/: wayfire.ini
windows-terminal/: settings.json
x11/: .xinitrc  .xprofile
yarn/: .yarnrc
zsh/: .zshrc  zshrc.zsh
zsh/fzf/: repo_list.sh  tmuxn.zsh
(+174 files in other folders)
